--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -430,8 +430,9 @@ late_block_raw <- block_raw_tbl %>%
   mutate(Slot.DateYear = TO_DATE(SLOT_BEGIN_TIME),
          Slot.Year = year(SLOT_BEGIN_TIME),
          Slot.Month = month(SLOT_BEGIN_TIME)) %>%
-  filter(Slot.Year == 2023) %>%
-  filter(Slot.Month >= 08) %>%
+  filter(Slot.DateYear >= as.Date("2023-09-01")) %>%
+  # filter(Slot.Year == 2024) %>%
+  # filter(Slot.Month >= 08) %>%
   left_join(block_name_tbl %>% dplyr::select(APPT_BLOCK_C, NAME), 
             by = c("BLOCK_C" = "APPT_BLOCK_C")) %>%
   left_join(block_name_tbl %>% dplyr::select(APPT_BLOCK_C, NAME), 
@@ -439,7 +440,7 @@ late_block_raw <- block_raw_tbl %>%
   rename(block_name = NAME.x,
          org_block_name = NAME.y) %>%
   mutate(comb_block_name = trim(ifelse(is.na(org_block_name), block_name, org_block_name))) 
-  
+
 ```
 
 
